# mnema

./: README.md  pyproject.toml  setup_mnema_lib.sh
mnema/: __init__.py  config.py  core.py
mnema/model/: __init__.py  inference.py  loader.py
